# fastapi-channels

./: README.md  pyproject.toml  requirements.txt  run_tests.py
core/: config.py  exceptions.py  typed.py
core/backends/: base.py  memory.py  redis.py
core/connections/: manager.py  registry.py  state.py
core/consumer/: base.py
core/middleware/: __init__.py  base.py  rate_limit.py  validation.py
core/utils/: batching.py  retry.py
example/: consumers.py  database.py  external_events.py  main.py  template.html
fastapi_channel/: config.py  typed.py
fastapi_channel/backends/: memory.py  redis.py
fastapi_channel/connections/: heartbeat.py  manager.py  registry.py  state.py
fastapi_channel/consumer/: base.py
fastapi_channel/middleware/: logging.py  rate_limit.py
fastapi_channel/serializers/: __init__.py  base.py  json_serializer.py  orjson_serializer.py  pickle_serializer.py
fastapi_channel/utils/: batching.py
fastapi_channels/: __init__.py  channel_layer.py  config.py
fastapi_channels/backends/: __init__.py  base.py  memory.py  redis.py
fastapi_channels/connections/: __init__.py  heartbeat.py  manager.py  registry.py  state.py
fastapi_channels/consumer/: __init__.py  base.py
fastapi_channels/middleware/: __init__.py  base.py  logging.py  rate_limit.py  validation.py
fastapi_channels/serializers/: __init__.py  json_serializer.py  orjson_serializer.py  pickle_serializer.py
fastapi_channels/utils/: __init__.py  batching.py  singleton.py
tests/: LOAD_TESTING_README.md  extreme_load_test.py  load_test.py  stress_test.py  test_chat_consumer.py  test_integration.py  test_redis_backend.py  test_redis_integration.py  test_redis_performance.py
